feat: add heavy equal icon

--- a/projects/ngx-query-builder/src/lib/components/query-builder.component.css
+++ b/projects/ngx-query-builder/src/lib/components/query-builder.component.css
@@ -25,6 +25,11 @@
     }
   }
 
+  .q-equal-icon {
+    fill: #555;
+    vertical-align: text-bottom;
+  }
+
   .q-up-icon {
     &::before {
       content: '▲';
