--- a/projects/ngx-query-builder/src/lib/components/query-builder.component.css
+++ b/projects/ngx-query-builder/src/lib/components/query-builder.component.css
@@ -187,6 +187,29 @@
     }
   }
 
+  .q-button-wrapper.q-hide-buttons .q-buttons {
+    display: none;
+  }
+
+  .q-button-wrapper .q-buttons {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+  }
+
+  .q-button-wrapper.q-hide-buttons:hover .q-buttons {
+    display: flex;
+  }
+
+  .q-button-wrapper.q-hide-buttons .q-ellipsis {
+    cursor: pointer;
+    padding: 0 4px;
+  }
+
+  .q-button-wrapper.q-hide-buttons:hover .q-ellipsis {
+    display: none;
+  }
+
   .q-invalid-ruleset {
     border: 1px solid rgba(179, 65, 93, 0.5) !important;
     background: rgba(179, 65, 93, 0.1) !important;
