feat: auto add rule when ruleset created

--- a/projects/ngx-query-builder/src/lib/components/query-builder.component.css
+++ b/projects/ngx-query-builder/src/lib/components/query-builder.component.css
@@ -137,6 +137,10 @@
     padding: 0 8px;
   }
 
+  .q-switch-label-empty {
+    visibility: hidden;
+  }
+
   .q-switch-radio {
     position: absolute;
     clip: rect(0, 0, 0, 0);
