--- a/projects/ngx-query-builder/src/lib/components/query-builder.component.css
+++ b/projects/ngx-query-builder/src/lib/components/query-builder.component.css
@@ -296,4 +296,13 @@
     font-size: 0.85em;
     align-self: center;
   }
+
+  .q-invalid-message {
+    font-size: 0.75em;
+    font-style: italic;
+    font-weight: 300;
+    color: #666;
+    align-self: center;
+    margin-right: 8px;
+  }
 }
