--- a/projects/ngx-query-builder/src/lib/components/query-builder.component.css
+++ b/projects/ngx-query-builder/src/lib/components/query-builder.component.css
@@ -31,6 +31,14 @@
     color: rgb(52 47 167)
   }
 
+  .q-search-icon::before {
+    content: '🔍'
+  }
+
+  .q-save-icon::before {
+    content: '💾'
+  }
+
   .q-up-icon {
     &::before {
       content: '▲';
@@ -302,6 +310,16 @@
     font-style: italic;
     font-weight: 300;
     color: #666;
+    align-self: center;
+    margin-right: 8px;
+  }
+
+  .q-name-text {
+    font-size: 0.75em;
+    font-style: italic;
+    font-weight: 300;
+    color: #666;
+    cursor: pointer;
     align-self: center;
     margin-right: 8px;
   }
