--- a/projects/ngx-query-builder/src/lib/components/query-builder.component.css
+++ b/projects/ngx-query-builder/src/lib/components/query-builder.component.css
@@ -346,4 +346,16 @@
   .q-name-action {
     margin-left: 8px;
   }
+
+  .q-name-label {
+    font-size: 0.75em;
+    font-style: italic;
+    font-weight: 300;
+    color: #666;
+    margin-left: 4px;
+  }
+
+  .q-name-modified {
+    font-weight: bold;
+  }
 }
