--- a/projects/ngx-query-builder/src/lib/components/query-builder.component.css
+++ b/projects/ngx-query-builder/src/lib/components/query-builder.component.css
@@ -347,6 +347,10 @@
     margin-left: 8px;
   }
 
+  .q-name-action-modified {
+    border: 2px solid #B3415D;
+  }
+
   .q-name-label {
     font-size: 0.75em;
     font-style: italic;
